# BibTidy

./: FEATURES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml  pylintrc  test.yaml
bibtidy/: __init__.py
bibtidy/core/: __init__.py  entry_types.py  keygen.py  merge.py  model.py  parser.py  search.py  sorting.py  tags.py  validation.py  writer.py
tests/: conftest.py  test_keygen.py  test_merge.py  test_model.py  test_parser.py  test_roundtrip.py  test_search.py  test_sorting.py  test_tags.py  test_validation.py  test_writer.py
tests/fixtures/: edgecases.bib  simple.bib
